# TCP-Server

./: .gitignore  CMakeLists.txt  README.md  build.sh  generate_certs.sh  run.sh
include/: dns_resolver.hpp  safe_logger.hpp  server_logger.h  server_logger.hxx  tcp_server.h  tcp_server.hpp  tcp_server.hxx  thread_safe_logger.hpp  thread_safe_logger.hxx
scripts/: build.sh  generate_certs.sh  run.sh
src/: dns_resolver.cxx  main.cc  main.cxx  tcp_server.cc  tcp_server.cxx
